--- a/Kada/Kada/Kada.vcxproj
+++ b/Kada/Kada/Kada.vcxproj
@@ -133,9 +133,14 @@
     <ClCompile Include="..\QTile\QTilePlugin.cpp" />
     <ClCompile Include="Kada.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="QtaddDialog.cpp" />
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="Kada.ui" />
+    <QtUic Include="QtaddDialog.ui">
+      <ExecutionDescription Condition="'$(Configuration)|$(Platform)'=='widget|x64'">Uic'ing %(Identity)...</ExecutionDescription>
+      <OutputFile Condition="'$(Configuration)|$(Platform)'=='widget|x64'">.\GeneratedFiles\ui_%(Filename).h</OutputFile>
+    </QtUic>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Kada.h" />
@@ -154,6 +159,15 @@
   </ItemGroup>
   <ItemGroup>
     <QtRcc Include="..\QTile\image.qrc" />
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="QtaddDialog.h">
+      <OutputFile Condition="'$(Configuration)|$(Platform)'=='widget|x64'">.\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp</OutputFile>
+      <ExecutionDescription Condition="'$(Configuration)|$(Platform)'=='widget|x64'">Moc'ing %(Identity)...</ExecutionDescription>
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='widget|x64'">.\GeneratedFiles</IncludePath>
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName)\.;$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtHelp;$(QTDIR)\include\QtQml;$(QTDIR)\include\QtSerialBus;$(QTDIR)\include\QtSerialPort;$(QTDIR)\include\QtSql;$(QTDIR)\include\QtSvg;$(QTDIR)\include\QtWidgets;$(QTDIR)\include\QtXml;$(QTDIR)\include\QtXmlPatterns</IncludePath>
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName)\.;$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtHelp;$(QTDIR)\include\QtQml;$(QTDIR)\include\QtSerialBus;$(QTDIR)\include\QtSerialPort;$(QTDIR)\include\QtSql;$(QTDIR)\include\QtSvg;$(QTDIR)\include\QtWidgets;$(QTDIR)\include\QtXml;$(QTDIR)\include\QtXmlPatterns</IncludePath>
+    </QtMoc>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
